initial graph stuff

--- a/TestLines/TestLines.vcxproj
+++ b/TestLines/TestLines.vcxproj
@@ -76,6 +76,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="visualize.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
