--- a/TestLines/TestLines.vcxproj.filters
+++ b/TestLines/TestLines.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="visualize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
