--- a/TestLines/TestLines.vcxproj.filters
+++ b/TestLines/TestLines.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="visualize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyGraph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
