--- a/TestLines/TestLines.vcxproj
+++ b/TestLines/TestLines.vcxproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graph.h" />
+    <ClInclude Include="MyGraph.h" />
     <ClInclude Include="visualize.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
