--- a/TestLines/TestLines.vcxproj.filters
+++ b/TestLines/TestLines.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Agent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
