--- a/TestLines/TestLines.vcxproj
+++ b/TestLines/TestLines.vcxproj
@@ -79,6 +79,7 @@
     <ClInclude Include="Agent.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Solver.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
